# astrobase_mcp

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  factmcp.json  mcp_server_snowflake.py  pyproject.toml  ruff.toml
docker/server/: DOCKERFILE
mcp_server_snowflake/: __init__.py  environment.py  factmcp.json  server.py  server_utils.py  utils.py
mcp_server_snowflake/cortext_services/: prompts.py  tools.py
mcp_server_snowflake/object_manager/: objects.py  prompts.py  tools.py
mcp_server_snowflake/query_manager/: prompts.py  tools.py
mcp_server_snowflake/semantic_manager/: objects.py  prompts.py  tools.py
mcp_server_snowflake/tests/: __init__.py  test_service_config.py
services/: configuration.yaml
