[project]
name = "mcp-server-snowflake"
version = "2.0.0"
description = "FastMCP server for Snowflake data warehouse integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "SamHalen"},
  {name = "Author Steve Rowland"},
]
dependencies = [
    # Core requirements only - minimal deployment
    "fastmcp>=2.11.3",
    "snowflake-connector-python>=3.15.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.4",
]

[dependency-groups]
# Optional dependencies for the original features (install with: pip install -e ".[original]")
original = [
    "mcp[cli]>=1.9.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "snowflake-core>=1.0.0",
    "sqlglot>=27.8.0",
]

# Development dependencies (install with: pip install -e ".[dev]")
dev = [
    "fast-agent-mcp>=0.2.24",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-snowflake = "mcp_server_snowflake.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
